tests/linearity-regression/accept/accept_03.pdx
module M03 = structure {
  let x = 3
  let y = 4
}
