tests/linearity-regression/reject/s0905_handler_skips_then_uses.pdx
module M = structure {
  let x = 1
  let y = 2
  let z = 3
  with {
    let handler = {
      op = fn() -> z; y; x
    }
  }
}
